tests/ui/parser/removed-syntax/removed-syntax-mut-vec-expr.rs
fn main() {
    let v = [mut 1, 2, 3, 4]; //~ ERROR expected expression, found keyword `mut`
}
